# scrapy_shops

./: .gitignore  Dockerfile  bot.py  docker-compose.yaml  main.py  pyproject.toml  scrapy.cfg  scrapyd.cfg  setup.py
core/: schema.py
core/crud/: base.py  porduct.py  price.py  processed.py  scrapyd.py  shop.py
core/db/: database.py  dependecy.py
core/models/: price.py  processeed.py  product.py  scrapyd.py  shop.py
core/routs/: price.py  processed.py  product.py  scrapyd.py  shop.py
core/utils/: price_parser.py
front_bot/: loader.py  request.py  utils.py
front_bot/data/: config.py
front_bot/keyboards/: inline.py
front_bot/state/: user.py
parse_files/: ecomarket_2021-10-16.csv  utkonos_2021-11-25.csv
parsing/: items.py  methods.py  middlewares.py  pipelines.py  request.py  settings.py
parsing/spiders/: ecomarket.py  funduchok.py  riboedov.py  utkonos.py  vkusvill.py  wildbress.py
