[tool.poetry]
name = "scrapy_shops"
version = "0.1.0"
description = ""
authors = ["yotamvladgmail.com <yotamvlad@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.70.0"
uvicorn = {extras = ["standard"], version = "^0.15.0"}
sqlmodel = "^0.0.4"
pandas = "^1.3.4"
psycopg2-binary = "^2.9.2"
python-multipart = "^0.0.5"
openpyxl = "^3.0.9"
Scrapy = "2.4.1"
scrapyd-client = "^1.2.0"
scrapyd = "^1.2.1"
bs4 = "^0.0.1"
aiogram = "^2.16"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
